+ First real version

--- a/main.css
+++ b/main.css
@@ -6,13 +6,19 @@
 /* ---------- */
 /* Main */
 html {
-  height:100%;
+  background: #e5e5e5 url("img/logo.png") no-repeat center top;
+  min-height: 100%;
 }
 
 body {
-  height: 100%;
   font-family: "Helvetica", "Arial", sans-serif;
-  overflow: hidden;
+  color: #4f4f4f;
+  font-size: 30px;
+  font-weight: 100;
+  width: 530px;
+  margin: 0 auto;
+  position: relative;
+  min-height: 100%;
 }
 
 p {
@@ -20,656 +26,28 @@ p {
 }
 
 a:link,
-a:visited,
-a:active,
-a:hover {
+a:visited {
   color: #000;
   text-decoration: none;
 }
 
-#debug {
-  position: absolute;
-/*   left: 500px; */
-  z-index: 2000;
-  background-color: rgba(255, 255, 255, 0.8);
+a:active,
+a:hover {
+  text-decoration: underline;
 }
 
-#spinner {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin-left: -16px;
-  margin-top: -16px;
-  display: none;
-  z-index: 2000;
+#main {
+  margin: 220px 0px 50px 0px;
 }
 
-#search {
-  position: absolute;
-  background-color: white;
-  border: 1px solid #ddd;
-  z-index: 10;
-}
-
-#search-inner {
-  padding: 20px;
-  position: absolute;
-  width: 200px;
-  height: 56px;
-  left: 50%;
-  top: 50%;
-  margin-left: -120px;
-  margin-top: -48px;
-  background-color: #fff;
+#fathom {
   -moz-box-shadow: 2px 2px 8px #aaa;
   -webkit-box-shadow: 2px 2px 8px #aaa;
+  box-shadow: 2px 2px 8px #aaa;
 }
 
-#search-prompt {
-  margin-bottom: 6px;
-  color: #333;
-}
-
-#queue-tray {
-  position: absolute;
-  width: 100%;
-  left: 0;
-  background-color: #f0f0f0;
-  z-index: -1;
-  box-shadow: inset 0px 0px 3px #bbb;
-}
-
-/* ---------- */
-/* Top */
-#top-nav {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  right: 0px;
-  height: 98px;
-  z-index: 2000;
-}
-
-#top-nav-bg {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
-#logo {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-}
-
-#loglo {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  z-index: 10;
-  display: none;
-}
-
-#info-buttons {
-  color: #bbb;
-  font-weight: bold;
-  position: absolute;
-  bottom: 5px;
-  left: 240px;
-  line-height: 1.5em;
-}
-
-#info-buttons div {
-  cursor: pointer;
-}
-
-#info-buttons div:hover {
-  color: #eee;
-}
-
-/* ---------- */
-/* Search Controls */
-#search-controls {
-  position: absolute;
-  top: 54px; 
-  right: 26px;
-  width: 200px;
-  height: 21px;
-}
-
-#search-box {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  border: 1px solid #444;
-  background-color: #eee;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-}
-
-#search-button {
-  position: absolute;
-  top: 0px;
-  right: -1px;
-  width: 22px;
-  height: 21px;
-  cursor: pointer;
-  background-image: url("../img/actionsprites.png");
-  background-position: -142px 0px;
-}
-
-#search-button:hover {
-  background-position: -142px -21px;
-}
-
-#search-button:active {
-  background-position: -142px -42px;
-}
-  
-#search-text {
-  position: absolute;
-  background-color: transparent;
-  width: 165px;
-  top: 2px;
-  left: 9px;
-  color: #aaa;
-  border: none;
-  outline: none;
-}
-
-#search-text.focused {
-  color: #000;
-}
-
-#search-status {
-  display: none;
-  color: #bbb; 
-  padding-right: 50px;
-}
-
-#search-error {
-  display: none;
-  position: absolute;
-  top: 12px;
-  right: 20px;
-  width: 200px;
-  color: #bbb; 
-}
-
-/* ---------- */
-/* Bottom */
 #footer {
-  color: #aaa;
-  position: absolute;
-  right: 4px;
-  bottom: 4px;
   font-size: 12px;
-  margin: 0px 15px 2px 0px;
-  z-index: 2000;
+  margin: 0px 0px 4px 0px;
 }
 
-#footer a:link,
-#footer a:visited,
-#footer a:active,
-#footer a:hover {
-  color: #779;
-}
-
-#footer a:active,
-#footer a:hover {
-  text-decoration: underline;
-}
-
-/* ---------- */
-/* Prompts */
-#start-prompt {
-  position: absolute;
-  z-index: 3000; 
-  top: 75px;
-  right: 20px;
-  display: none;
-}
-
-#start-prompt-tail {
-  top: 4px;
-  position: relative;
-  left: 120px;
-}
-
-#start-prompt-bubble {
-  width: 200px;
-  height: 100px;
-  background-color: #088;
-  padding: 10px;
-  -moz-border-radius: 8px;
-  -webkit-border-radius: 6px;
-  color: #ddd;
-  -moz-box-shadow: 3px 3px 4px #000;
-  -webkit-box-shadow: 3px 3px 4px #000;
-}
-
-/* ---------- */
-/* About */
-#about-container {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: none;
-  z-index: 3000;
-}
-
-#about-bg {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: #fff;
-}
-
-#about-content {
-  position: absolute;
-  color: #ddd;
-  width: 500px;
-  height: 500px;
-  background-color: #666;
-  overflow: hidden;
-  -moz-box-shadow: 3px 3px 8px #000;
-  -webkit-box-shadow: 3px 3px 8px #000;
-}
-
-#about-content-bg {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
-#about-nav {
-  width: 100%;
-}
-  
-#about-nav div {
-  float: left;
-  height: 1em;
-  text-align: center;
-  padding: 10px 20px;
-  cursor: pointer;
-  font-weight: bold;
-}
-
-#about-nav div.selected {
-  color: #eee;
-  background-color: #888 !important; 
-}
-
-#about-nav div:hover {
-  color: #fff;
-  background-color: #777;
-}
-
-#about-body {
-  clear: both;
-  padding: 20px;
-  background-color: #888;
-  height: 100%;
-}
-
-#about-body a:link,
-#about-body a:visited,
-#about-body a:active,
-#about-body a:hover {
-  color: #fff;
-}
-
-#about-body a:active,
-#about-body a:hover {
-  text-decoration: underline;
-}
-
-/* ---------- */
-/* Albums */
-.hidden {
-  opacity: 0;
-}
-
-.album {
-  cursor: pointer;
-  position: absolute;
-  -moz-box-shadow: 2px 2px 8px #aaa;
-  -webkit-box-shadow: 2px 2px 8px #aaa;
-}
-
-.album.big {
-  cursor: default;
-}
-
-.in-queue {
-  z-index: 1010;
-}
-
-.album-image {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
-.big {
-  z-index: 1000;
-}
-
-.artist-image {
-  position: absolute;
-  z-index: 1010;
-  width: 100%;
-  height: 100%;
-}
-
-.button-bar {
-  position: absolute;
-  z-index: 2000;
-}
-
-.hover {
-  z-index: 1800 !important;
-}
-
-.label {
-  position: absolute;
-}
-
-#playing-label {
-  z-index: 20;
-}
-
-.album-shield {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  bottom: 0px;
-  right: 0px; 
-  z-index: 2000;
-  -moz-border-radius: 6px;
-  -webkit-border-radius: 6px;
-}
-
-.album.big .album-shield {
-  background-color: rgba(255, 255, 255, 0.6);  
-  top: 10px;
-  left: 10px;
-  bottom: 10px;
-  right: 10px; 
-  padding: 10px;
-  overflow: hidden; 
-}
-
-.album-info {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  bottom: 90px;
-  right: 60px; 
-  padding: 10px;
-  overflow: hidden; 
-}
-
-.playing {
-  font-weight: bold;
-}
-
-.disclaimer {
-  margin-top: 2em;
-  font-size: 12px;
-  color: #444;
-}
-
-.disclaimer-link {
-  cursor: pointer;
-  color: #779;
-}
-
-.disclaimer-link:hover {
-  text-decoration: underline;
-}
-
-/* More Panel */
-.more-panel {
-  float: left;
-}
-
-/* Site Panel */
-.site-panel {
-  width: 70px;
-  height: 70px;
-  float: right;
-  position: relative;
-  margin: 5px;
-}
-
-/* Close Button */
-.close-button {
-  cursor: pointer;
-  width: 45px;
-  height: 45px;
-  background-image: url("../img/actionsprites.png");
-  background-position: -45px 0px;
-}
-
-.close-button.button-hover {
-  background-position: -45px -45px;
-}
-
-.close-button.button-push {
-  background-position: -45px -90px;
-}
-  
-/* Queue Button */
-.queue-button {
-  position: relative;
-  top: -8px;
-  cursor: pointer;
-  width: 45px;
-  height: 45px;
-  background-image: url("../img/actionsprites.png");
-  background-position: -90px 0px;
-}
-
-.queue-button.button-hover {
-  background-position: -90px -45px;
-}
-
-.queue-button.button-push {
-  background-position: -90px -90px;
-}
-  
-.in-queue .queue-button {
-  display: none;
-}
-
-/* More Related Button */
-.more-related-button {
-  position: relative;
-  top: -16px;
-  cursor: pointer;
-  width: 45px;
-  height: 45px;
-  background-image: url("../img/actionsprites.png");
-  background-position: 0px 0px;
-}
-
-.more-related-button.button-hover {
-  background-position: 0px -45px;
-}
-
-.more-related-button.button-push {
-  background-position: 0px -90px;
-}
-
-/* More Artist Button */
-.more-artist-button {
-  position: relative;
-  top: -3px;
-  left: 3px;
-  cursor: pointer;
-  width: 20px;
-  height: 20px;
-  display: inline-block;
-  vertical-align: top;
-  background-image: url("../img/plussprites.png");
-  background-position: 0px 0px;
-}
-
-.more-artist-button.button-hover {
-  background-position: 0px -20px;
-}
-
-.more-artist-button.button-push {
-  background-position: 0px -40px;
-}
-
-/* Play Button */
-.play-button {
-  cursor: pointer;
-  width: 102px;
-  height: 47px;
-  background-image: url("../img/playsprites.png");
-  background-position: -57px 0px;
-  float: left;
-}
-
-.play-button.button-hover {
-  background-position: -57px -47px;
-}
-
-.play-button.button-push {
-  background-position: -57px -94px;
-}
-  
-/* Pause Button */
-.pause-button {
-  cursor: pointer;
-  width: 102px;
-  height: 47px;
-  background-image: url("../img/playsprites.png");
-  background-position: -282px 0px;
-  float: left;
-}
-
-.pause-button.button-hover {
-  background-position: -282px -47px;
-}
-
-.pause-button.button-push {
-  background-position: -282px -94px;
-}
-  
-/* Next Track Button */
-.next-track-button {
-  cursor: pointer;
-  width: 66px;
-  height: 47px;
-  background-image: url("../img/playsprites.png");
-  background-position: -159px 0px;
-  float: left;
-}
-
-.next-track-button.button-hover {
-  background-position: -159px -47px;
-}
-
-.next-track-button.button-push {
-  background-position: -159px -94px;
-}
-
-/* Previous Track Button */
-.prev-track-button {
-  cursor: pointer;
-  width: 57px;
-  height: 47px;
-  background-image: url("../img/playsprites.png");
-  background-position: 0px 0px;
-  float: left;
-}
-
-.prev-track-button.button-hover {
-  background-position: 0px -47px;
-}
-
-.prev-track-button.button-push {
-  background-position: 0px -94px;
-}
-
-/* Grooveshark Button */
-.grooveshark-button {
-  width: 35px;
-  height: 35px;
-  background-image: url("../img/sites/gshover.png");
-  position: absolute;
-  top: 0px;
-  left: 0px;
-}
-
-.grooveshark-button.button-hover {
-  background-image: url("../img/sites/gs.png");
-}
-
-/* Last.fm Button */
-.lastfm-button {
-  width: 35px;
-  height: 35px;
-  background-image: url("../img/sites/lasthover.png");
-  position: absolute;
-  top: 0px;
-  right: 0px;
-}
-
-.lastfm-button.button-hover {
-  background-image: url("../img/sites/last.png");
-}
-
-/* Rdio Button */
-.rdio-button {
-  width: 35px;
-  height: 35px;
-  background-image: url("../img/sites/rdiohover.png");
-  position: absolute;
-  bottom: 0px;
-  left: 0px;
-}
-
-.rdio-button.button-hover {
-  background-image: url("../img/sites/rdio.png");
-}
-
-/* iTunes Button */
-.itunes-button {
-  width: 35px;
-  height: 35px;
-  background-image: url("../img/sites/applehover.png");
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
-}
-
-.itunes-button.button-hover {
-  background-image: url("../img/sites/apple.png");
-}
-
-/* Last.fm Button */
-.amazon-button {
-  width: 70px;
-  height: 70px;
-  background-image: url("../img/sites/amazonhover.png");
-  position: absolute;
-  top: 0px;
-  left: 0px;
-}
-
-.amazon-button.button-hover {
-  background-image: url("../img/sites/amazon.png");
-}
-
-    
