--- a/main.css
+++ b/main.css
@@ -15,7 +15,8 @@ body {
   color: #4f4f4f;
   font-size: 30px;
   font-weight: 100;
-  width: 530px;
+  width: 95%;
+  max-width: 1200px;
   margin: 0 auto;
   position: relative;
   min-height: 100%;
@@ -40,6 +41,10 @@ a:hover {
   margin: 220px 0px 50px 0px;
 }
 
+.center {
+  text-align: center;
+}
+
 .icon {
   -moz-box-shadow: 2px 2px 8px #aaa;
   -webkit-box-shadow: 2px 2px 8px #aaa;
@@ -47,7 +52,22 @@ a:hover {
 }
 
 #footer {
+  text-align: center;
   font-size: 12px;
   margin: 0px 0px 4px 0px;
 }
 
+.things {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.thing {
+  width: 350px;
+  margin: 0 20px;
+}
+
+.thing img {
+  width: 350px;
+}
