--- a/livingworlds/style/main.css
+++ b/livingworlds/style/main.css
@@ -10,10 +10,11 @@ html, body {
 }
 
 body {
-	background-image: url(../img/background.jpg);
-	background-size: cover;
-	font-family: "Open Sans", arial, sans-serif;
-	color: #05D798;
+  background-color: #e5e5e5;
+	/* background-image: url(../img/background.png); */
+	/* background-size: contains; */
+  font-family: "Helvetica", "Arial", sans-serif;
+  color: #4f4f4f;
 	text-align: center;
 }
 
@@ -28,13 +29,36 @@ h1, h2 {
 }
 
 a {
-	color: #15E7A8;
+	color: #333;
 	font-weight: bold;
 	text-decoration: none;
 }
 
 video {
 	max-width: 95%;
+}
+
+.content {
+  display: flex;
+  
+}
+
+.content .left {
+  position: relative;
+  padding: 30px;
+  flex-basis: 10px;
+  flex-grow: 1;
+}
+
+.scene {
+  max-width: 100%;
+  max-height: 80vh;
+}
+
+.content .right {
+  padding: 30px;
+  flex-grow: 1;
+  flex-basis: 10px;
 }
 
 /* #05D798 */
