--- a/livingworlds/style/main.css
+++ b/livingworlds/style/main.css
@@ -15,6 +15,9 @@ body {
 	/* background-size: contains; */
   font-family: "Helvetica", "Arial", sans-serif;
   color: #4f4f4f;
+  max-width: 1500px;
+  margin: 0 auto;
+  width: 100%;
 }
 
 h1 {
