--- a/livingworlds/style/main.css
+++ b/livingworlds/style/main.css
@@ -21,7 +21,7 @@ body {
 }
 
 h1 {
-  margin-top: 30px;
+  margin: 30px 10px 20px 10px;
 }
 
 h1, h2 {
@@ -29,15 +29,15 @@ h1, h2 {
 }
 
 .android {
-  width: 240px;
+  height: 63px;
+  margin: 10px;
   display: inline-block;
   vertical-align: middle;
 }
 
 .ios {
-  width: 240px;
-  font-size: 1.5em;
-  font-weight: 300;
+  height: 63px;
+  margin: 10px;
   display: inline-block;
   vertical-align: middle;
 }
@@ -100,6 +100,16 @@ video {
 @media (max-width: 767px) {
   .content {
     display: block;
+  }
+}
+
+@media (max-width: 500px) {
+  .ios,
+  .android {
+    display: block;
+    height: auto;
+    width: 243px;
+    margin: 20px auto;
   }
 }
 
