--- a/livingworlds/style/main.css
+++ b/livingworlds/style/main.css
@@ -73,9 +73,29 @@ video {
   flex-grow: 1;
 }
 
+.scene-wrapper {
+  position: relative;
+  font-size: 0;
+}
+
 .scene {
   max-width: 100%;
   max-height: 80vh;
+}
+
+.scene-2 {
+  opacity: 0;
+  transition: opacity 1s linear;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+}
+
+.scene-2.shown {
+  opacity: 1;
 }
 
 .content .right {
