--- a/livingworlds/style/main.css
+++ b/livingworlds/style/main.css
@@ -76,6 +76,8 @@ video {
 .scene-wrapper {
   position: relative;
   font-size: 0;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .scene {
