--- a/livingworlds/style/main.css
+++ b/livingworlds/style/main.css
@@ -119,6 +119,14 @@ video {
   line-height: 2em;
 }
 
+.support-page h2 {
+  margin-top: 2em;
+}
+
+.support-page h3 {
+  margin-top: 2em;
+}
+
 @media (max-width: 767px) {
   .content {
     display: block;
